# ekg-shared-resources

./: .gitignore  README.md
.github/workflows/: cpp_build.yml  rust_build.yml
cpp/: CMakeLists.txt
proto/: client.proto  dataExchange.proto  messages.proto  server.proto
proto_schema/: data.proto
rust/proto/: Cargo.toml  build.rs
rust/proto/src/: lib.rs
